<resources>
  <string name="ABOUT">About</string>
  <string name="ABOUT_PHONE">Service hotline</string>
  <string name="ACCOUNT">Account</string>
  <string name="ACCOUNT_1">Account</string>
  <string name="ACCOUNT_ERR">Invalid account</string>
  <string name="ACCOUNT_ERR_1">Invalid account</string>
  <string name="ACCOUNT_ERR_3">Please enter account</string>
  <string name="ACCOUNT_ID">Account ID:%s</string>
  <string name="ACCOUNT_QQ">QQ</string>
  <string name="ACCOUNT_XL">Weibo</string>
  <string name="ADD_EQUIPMENT">Click \"+\" to add your device</string>
  <string name="ADD_ERR_INFO">Unable to connect to the network \n Please click the \"Back\" home page to view the status of the device</string>
  <string name="ADD_EXISTINGFACE_BEYOND10">You can only add up to 10 faces</string>
  <string name="ADD_FAILED">Failed to add, please retry.</string>
  <string name="ADD_FAILED_1">Failed to add</string>
  <string name="ADD_SHARE">Share</string>
  <string name="ADD_SUCC_1">Added successfully</string>
  <string name="AGREE">I read and agree</string>
  <string name="AI_CAT">Cat</string>
  <string name="AI_DOG">Dog</string>
  <string name="AI_HUMAN">Human</string>
  <string name="AI_VEHICLE">Vehicle</string>
  <string name="ALARM">Alarm sound</string>
  <string name="ALERTS">Alert sounds</string>
  <string name="ALIAS">Nickname</string>
  <string name="ALLDAY">Allday</string>
  <string name="ALLDAY_OPEN">Whole day open</string>
  <string name="ALTER">Alter</string>
  <string name="ANEW_SEND">Resend</string>
  <string name="AT_HOME">At home</string>
  <string name="AUDIBLE_ALERT">Choose the Audio alert to be played when motion is detected</string>
  <string name="Add_Device_ENTER_SN">Please enter the (S/N)CID</string>
  <string name="Add_Device_SN">Input (S/N)CID</string>
  <string name="Add_Device_Scan_QR">Scan QR code</string>
  <string name="Added_successfully">Bind successfully</string>
  <string name="Alarm_WeChat">Alarm via WeChat</string>
  <string name="Alarm_WeChat_NoBindTips">Using this function needs to bind email first.</string>
  <string name="Apr">Apr.</string>
  <string name="Aug">Aug.</string>
  <string name="BACK">Back</string>
  <string name="BARKING">Barking</string>
  <string name="BATTERY_LEVEL">Battery capacity</string>
  <string name="BEGIN_TALKBACK">Start to talkback</string>
  <string name="BIND_INFO">Adding is not finished,sure to quit?</string>
  <string name="BLE_SENSOR">Bluetooth</string>
  <string name="BLINKING">Blue light is blinking</string>
  <string name="BLUE_BLINKING">Please make sure WIFI indicator light is flashing blue , If not please press the WIFI button for 3 seconds until indicator light starts to flash blue.</string>
  <string name="Button_Add">Add</string>
  <string name="Button_No">No</string>
  <string name="Button_ReObtain">Re-send</string>
  <string name="Button_Sure">Sure</string>
  <string name="Button_Yes">Yes</string>
  <string name="CALL_CAMERA_NAME">Doorbell</string>
  <string name="CALL_SUCCESS_OPEN_SAVE">After press the device call key, it will turn on or off energy saving mode</string>
  <string name="CAMERA">Camera</string>
  <string name="CAMERA4G_CONNECTAP_BUTTON">Flashing without SIM card</string>
  <string name="CAMERA4G_CONNECTAP_GUIDE1">After turn on, wait for the yellow led flashing</string>
  <string name="CAMERA4G_CONNECTAP_GUIDE2">Make sure the device without a SIM card</string>
  <string name="CAMERA4G_INSERTSIM_BUTTON">SIM card inserted</string>
  <string name="CAMERA4G_INSERTSIM_DETECTING">Detecting&#8230;</string>
  <string name="CAMERA4G_INSERTSIM_GUIDE1">Insert the SIM card into the card slot</string>
  <string name="CAMERA4G_INSERTSIM_GUIDE2">Make sure the SIM card is available</string>
  <string name="CAMERA4G_NOSIM">No available SIM card</string>
  <string name="CAMERA_4G">Camera (4G Version)</string>
  <string name="CANCEL">Cancel</string>
  <string name="CARRY_ON">Continue</string>
  <string name="CHANGE_EMAIL">Change E-mail</string>
  <string name="CHANGE_PHONE_NUM">Change phone number</string>
  <string name="CHANGE_PWD">Change Password</string>
  <string name="CHARGING">Charging   </string>
  <string name="CHOOSE">Select</string>
  <string name="CHOOSE_COVER">Select Cover</string>
  <string name="CHOOSE_NETWORK">WIFI settings — select a Network</string>
  <string name="CHOOSE_PHOTOS">Select from Photos</string>
  <string name="CHOOSE_PIC">User-define</string>
  <string name="CHOOSE_WIFI">Select a netwrok</string>
  <string name="CID_DELETED">\"%s\" has been deleted</string>
  <string name="CID_USED">Device has been bound.If continued,it will be forced to unbind from others,continue or not?</string>
  <string name="CLEAR">Clear</string>
  <string name="CLEAR_DATA">Clear messages cache</string>
  <string name="CLOSE_BUTTON">Close</string>
  <string name="CLOSE_DOOR_SUCCE_MSG">Close the door successfully</string>
  <string name="CODE_ERR">Invalid code</string>
  <string name="COMFIRM_NEW_PASS">Retype new Password</string>
  <string name="CONNECTING">No response, please try again</string>
  <string name="CONNECTING_1">Connecting</string>
  <string name="CONN_INTERRUPTED">Connecting to network</string>
  <string name="CONTINUE_REGISTER">Continue to register</string>
  <string name="CREATING">Adding&#8230;</string>
  <string name="CURRENT_PWD">Current password</string>
  <string name="Cable_Mode">Cable mode</string>
  <string name="Cable_Mode_Start_Hotspot">Before you turn on, make sure your phone and device are connected to the same router</string>
  <string name="Cable_Mode_Switch_Cancel">If off, it may cause offline of the device, confirm off?</string>
  <string name="Camera_Outdoor">Camera (Outdoor Version)</string>
  <string name="CancelingTips">Canceling&#8230;</string>
  <string name="Cellular_Data_Method">Mobile data:</string>
  <string name="Cellular_Data_Set_Up">Enable Mobile data in the device, please use below way, Settings> Mobile data</string>
  <string name="Change_ID">Change WeChat ID</string>
  <string name="ChargingLight">Charging light</string>
  <string name="ChargingLight_BlueFlashing">Blue flashing: Charging</string>
  <string name="ChargingLight_SteadyBlue">Steady blue: Full</string>
  <string name="Choose_Album">Select an album</string>
  <string name="Clear_Sdcard">Wipe SD card</string>
  <string name="Clear_Sdcard_tips">The data of SD card can\'t be recovered if been wiped, sure to continue?</string>
  <string name="Clear_Sdcard_tips2">Device will reboot when wiping data</string>
  <string name="Clear_Sdcard_tips3">Wipe data successfully</string>
  <string name="Clear_Sdcard_tips4">Wipe data failed</string>
  <string name="Clear_Sdcard_tips5">Connection timeout</string>
  <string name="Clear_Sdcard_tips6">Data of SD card has been wiped</string>
  <string name="ClearingTips">Clearing&#8230;</string>
  <string name="Cloud_Camera">Camera (Battery Version)</string>
  <string name="Consumer_Camera">Consumer Camera</string>
  <string name="DATA_FLOW_PHOTO">Data consumption would be created if view original photo without WIFI connection,continue?</string>
  <string name="DEAL_FEEDBACK">Thank you for your feedback</string>
  <string name="DELETE">Delete</string>
  <string name="DELETED">Deleted</string>
  <string name="DELETED_SUC">Deleted Successfully</string>
  <string name="DELETEING">Deleting&#8230;</string>
  <string name="DELETE_CID">Delete Device</string>
  <string name="DELETE_EQUIPMENT">Please delete the device first</string>
  <string name="DELETE_SURE">Sure to delete all messages?</string>
  <string name="DELETE_THEME">Delete</string>
  <string name="DELETE_THEME_XX">Are you sure to delete %s ?</string>
  <string name="DETECTED_AI">Discover</string>
  <string name="DETECTION_AREA">Detection area</string>
  <string name="DETECTION_AREA_ADD">Set detection area</string>
  <string name="DETECTION_AREA_DEFAULT">default</string>
  <string name="DETECTION_AREA_DESCRI">All zones are detected by default, and will send alarms only when the specified area changes</string>
  <string name="DETECTION_AREA_FAILED_LOAD">failed to load real-time graph</string>
  <string name="DETECTION_AREA_FAILED_LOAD_RETRY">fail to get live image, so can not set area, please try agian.</string>
  <string name="DETECTION_AREA_GUIDE">Drag the red box to set the detection area</string>
  <string name="DETECTION_AREA_RESTORE">Restore Defaults</string>
  <string name="DETECTION_AREA_SET">Has been set</string>
  <string name="DEVICE">Device</string>
  <string name="DEVICES_TIPS_TEXT">This process requires:\n1.Your device is connected to your WIFI network\n2.A Registered and Active Account\n3.With the current account bound</string>
  <string name="DEVICES_TITLE">Add Device</string>
  <string name="DEVICES_TITLE_1">Connect to device</string>
  <string name="DEVICES_TITLE_2">Find device</string>
  <string name="DEVICES_TITLE_3">Set WiFi</string>
  <string name="DEVICES_TITLE_4">Add</string>
  <string name="DEVICE_2G_ONLINE">2G-Online</string>
  <string name="DEVICE_3G_ONLINE">3G-Online</string>
  <string name="DOOR_CLEAR_REOCRD">Clear call records</string>
  <string name="DOOR_HINT_LAGEL">Red and blue flashing alternatively,\nsoftware is upgrading.</string>
  <string name="EQUIPMENT_INFO">Device info</string>
  <string name="FINISHED">Done</string>
  <string name="FOOT_TIP_VOTE">When the local Electric AC power is 110V/60Hz, enable this function. Otherwise, the video images would be influenced.</string>
  <string name="HZ_NTSC_PAL">Start NTSC</string>
  <string name="I_KNOW">OK</string>
  <string name="LED">Device indicator light</string>
  <string name="LIGTH_DOOR_LABEL_0">Red light, WiFi configuration</string>
  <string name="LIGTH_DOOR_LABEL_1">Red blinking, Connect to network</string>
  <string name="LIGTH_DOOR_LABEL_2">Blue blinking, calling</string>
  <string name="LIGTH_DOOR_LABEL_3">Green light, charging</string>
  <string name="LIGTH_LABEL_0_1">Blue blinking, WiFi Configuration</string>
  <string name="LIGTH_LABEL_0_2">Blue light, WiFi Online</string>
  <string name="LIGTH_LABEL_1_1">Blue blinking, Connect to network</string>
  <string name="LIGTH_LABEL_1_2">Blue light, 3G/4G Online</string>
  <string name="LIGTH_LABEL_2_1">Blinking, Low battery</string>
  <string name="LIGTH_LABEL_2_2">Blue light, Powered</string>
  <string name="LOCATION_NAME_ERROR">Please enter a name</string>
  <string name="MESSAGES_IDENTIFY_ADD_BTN">Add to existing face</string>
  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Register face</string>
  <string name="MESSAGES_IDENTIFY_POP">Register face, or by adding to an existing face, improve the accuracy of face recognition</string>
  <string name="MOBILE_DATA">Mobile data network</string>
  <string name="NETWORK">Network</string>
  <string name="SECURE">Security</string>
  <string name="SETTINGS">Settings</string>
  <string name="SETTINGS_1">Settings</string>
  <string name="SETTING_RECORD">Video settings</string>
  <string name="SETTING_SD">Micro SD card</string>
  <string name="Start_Hotspot">Start hotspot</string>
  <string name="Start_Hotspot_Note">Start hotspot may cause offline of the device; after turning on, wait for flashing blue light of device</string>
  <string name="Tap1_CameraFun_Standby">Standby</string>
  <string name="Tap1_CameraFun_Timelapse_NotStart">Coming</string>
  <string name="Tap1_CameraFun_VideoDirection">Reverse</string>
  <string name="Tap1_Camera_ViewAngle">View angle</string>
  <string name="Tap1_HomeMode">WIFI mode</string>
  <string name="Tap1_LogoSelect">Logo select</string>
  <string name="Tap1_OutdoorMode">LAN mode</string>
  <string name="Tap2_Timelapse_title">Time-lapse photography</string>
  <string name="WIFI">WiFi</string>
  <string name="WIFI_HINT_LAGEL">WiFi products no 3G indicator</string>
  <string name="WIFI_HINT_LAGEL_0">WiFi light</string>
  <string name="WIFI_HINT_LAGEL_1">3G/4G light</string>
  <string name="WIFI_HINT_LAGEL_2">Power light</string>
  <string name="infrared_night_vision">infrared night vision</string>
</resources>