<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/MESSAGES_IDENTIFY_POP" />

    <TextView
        android:id="@+id/detect_new_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MESSAGES_IDENTIFY_CREATE_BTN" />

    <TextView
        android:id="@+id/detect_add_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MESSAGES_IDENTIFY_ADD_BTN" />

    <TextView
        android:id="@+id/detect_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CANCEL" />

</LinearLayout>