<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hunt="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context="com.cylan.jiafeigou.n.view.activity.CamSettingActivity">

    <com.cylan.jiafeigou.widget.CustomToolbar
        android:id="@+id/custom_toolbar"
        layout="@layout/layout_default_custom_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        hunt:ct_background_color="@color/color_0ba8cf"
        hunt:ct_enable_shadow="true"
        hunt:ct_enable_theme="true"
        hunt:ct_fit_system_window="true"
        hunt:ct_icon="@drawable/nav_icon_back_white"
        hunt:ct_left_title="@string/SETTINGS_1"
        hunt:ct_left_title_color="@color/color_white"
        hunt:ct_title_color="@color/color_black" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/y10"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/lLayout_setting_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/y20"
                android:paddingStart="@dimen/y20"
                android:text="@string/SETTINGS"
                android:textColor="@color/color_4b9fd5"
                android:textSize="@dimen/sp15" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_device_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                hunt:sv_image_src="@drawable/setting_icon_information"
                hunt:sv_sub_title="@string/EQUIPMENT_INFO"
                hunt:sv_title="@string/EQUIPMENT_INFO"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />


            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_device_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                hunt:sv_image_src="@drawable/setting_icon_logo"
                hunt:sv_title="@string/Tap1_LogoSelect"
                hunt:sv_v_divider="false"
                hunt:sv_v_image_show="true" />

            <TextView
                android:id="@+id/network_setting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y15"
                android:paddingEnd="@dimen/y20"
                android:paddingStart="@dimen/y20"
                android:text="@string/NETWORK"
                android:textColor="@color/color_4b9fd5"
                android:textSize="@dimen/sp15" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_device_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                hunt:sv_image_src="@drawable/setting_icon_wifi"
                hunt:sv_sub_title="cylan608"
                hunt:sv_title="@string/WIFI"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView1
                android:id="@+id/sv_setting_device_wired_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                hunt:sv_image_src="@drawable/setting_icon_wired"
                hunt:sv_sub_title="cylan608"
                hunt:sv_title="@string/Cable_Mode"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_device_soft_ap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                hunt:sv_image_src="@drawable/setting_icon_ap"
                hunt:sv_sub_title="@string/Start_Hotspot_Note"
                hunt:sv_title="@string/Start_Hotspot"
                hunt:sv_v_divider="false"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView1
                android:id="@+id/sv_setting_device_mobile_network"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y54"
                android:visibility="gone"
                hunt:sv_image_src="@drawable/setting_icon_3g"
                hunt:sv_title="@string/MOBILE_DATA"
                hunt:sv_v_divider="false"
                hunt:sv_v_image_show="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y15"
                android:paddingEnd="@dimen/y20"
                android:paddingStart="@dimen/y20"
                android:text="@string/SETTINGS_1"
                android:textColor="@color/color_4b9fd5"
                android:textSize="@dimen/sp15" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_device_home_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                hunt:sv_image_src="@drawable/setting_icon_wifi"
                hunt:sv_title="@string/Tap1_HomeMode"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_direct_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                hunt:sv_image_src="@drawable/setting_icon_ap"
                hunt:sv_title="@string/Tap1_OutdoorMode"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_safe_protection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                hunt:sv_image_src="@drawable/setting_icon_safe"
                hunt:sv_title="@string/SECURE"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />


            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_device_auto_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                hunt:sv_image_src="@drawable/setting_icon_videotape"
                hunt:sv_title="@string/SETTING_RECORD"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_device_sd_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                hunt:sv_image_src="@drawable/setting_icon_sd"
                hunt:sv_title="@string/SETTING_SD"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />


            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_device_delay_capture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                hunt:sv_image_src="@drawable/setting_icon_filming"
                hunt:sv_sub_title="@string/Tap1_CameraFun_Timelapse_NotStart"
                hunt:sv_title="@string/Tap2_Timelapse_title"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />


            <com.cylan.jiafeigou.widget.SettingItemView1
                android:id="@+id/sv_setting_device_standby_mode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y54"
                hunt:sv_image_src="@drawable/setting_icon_standby"
                hunt:sv_sub_title="000d0d0d"
                hunt:sv_title="@string/Tap1_CameraFun_Standby"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sbtn_setting_sight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                hunt:sv_image_src="@drawable/setting_icon_angle_visual_angle"
                hunt:sv_title="@string/Tap1_Camera_ViewAngle"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView1
                android:id="@+id/sv_setting_device_indicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y54"
                hunt:sv_image_src="@drawable/setting_icon_light"
                hunt:sv_title="@string/LED"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />


            <com.cylan.jiafeigou.widget.SettingItemView1
                android:id="@+id/sv_setting_device_rotatable"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y54"
                hunt:sv_image_src="@drawable/setting_icon_rotate_pic"
                hunt:sv_title="@string/Tap1_CameraFun_VideoDirection"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sbtn_setting_pir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                hunt:sv_image_src="@drawable/setting_icon_ntsc"
                hunt:sv_sub_title="@string/FOOT_TIP_VOTE"
                hunt:sv_title="@string/infrared_night_vision"
                hunt:sv_v_divider="true"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sbtn_setting_110v"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                hunt:sv_image_src="@drawable/setting_icon_ntsc"
                hunt:sv_sub_title="@string/FOOT_TIP_VOTE"
                hunt:sv_switch_visibility="true"
                hunt:sv_title="@string/HZ_NTSC_PAL"
                hunt:sv_v_divider="false"
                hunt:sv_v_image_show="true" />

            <com.cylan.jiafeigou.widget.SettingItemView0
                android:id="@+id/sv_setting_device_clear_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                hunt:sv_title="@string/DOOR_CLEAR_REOCRD"
                hunt:sv_v_divider="false" />

            <TextView
                android:id="@+id/tv_setting_unbind"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y42"
                android:layout_marginBottom="@dimen/y20"
                android:layout_marginEnd="@dimen/y36"
                android:layout_marginStart="@dimen/y36"
                android:layout_marginTop="@dimen/y61"
                android:background="@drawable/un_bind_device_btn_seletor"
                android:gravity="center"
                android:text="@string/DELETE_CID"
                android:textColor="@color/color_FF3D32"
                android:textSize="@dimen/sp16" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
