<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.cylan.jiafeigou.widget.CustomToolbar
        android:id="@+id/custom_toolbar"
        layout="@layout/layout_default_custom_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ct_enable_theme="true"
        app:ct_icon="@drawable/nav_icon_back_gary"
        app:ct_right_title="@string/FINISHED"
        app:ct_title="@string/MESSAGES_IDENTIFY_CREATE_BTN" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/LOCATION_NAME_ERROR" />
</LinearLayout>
